mxslc/tests/data/error/amb_func_2.mxsl
T foo<float, color3>(float x)
{
    return T(x);
}

color3 gray = color3(1.0) * foo(0.8);
